test/runtime/fail/runtime/divide_by_zero.hy

// expect error: Attempt to divide by 0

let a = 0
let b = 3 / a
